@@ -1,3 +1,8 @@
+2015-04-07  Pedro Alves  <palves@redhat.com>
+
+	* gdb.compile/compile.exp: Use gdb_compile with "shlib=" option
+	instead of build_executable.  Use gdb_load_shlibs.
+
 2016-04-07  Yao Qi  <yao.qi@linaro.org>
 
 	* gdb.reverse/finish-reverse-bkpt.exp: Use temporary breakpoint.
